--- a/src/components/project/project.module.scss
+++ b/src/components/project/project.module.scss
@@ -5,6 +5,7 @@
   gap: 16px;
 }
 
+
 .lewyprzycisk {
   display: flex;
   align-items: center;
@@ -15,6 +16,7 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
+  color: white;
 }
 
 .lewyregc {
